examples/k8s-envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lsm-server
  namespace: lsm-example
spec:
  selector:
    app: lsm-server
  ports:
    - name: https
      port: 8443
      targetPort: 8443
